example/k8s/harukabot-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: pvtest
  labels:
    name: pvtest
