example/k8s/harukabot-db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: database
  namespace: pvtest
spec:
  selector:
    matchLabels:
      app: database 
  replicas: 1
  serviceName: database-svc
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - name: database
          image: pk-hbr-hj-801.hj.vm/harborpj1/postgres:12.1
          volumeMounts:
            - name: dbdata
              mountPath: "/var/lib/postgresql/data"
  volumeClaimTemplates:
  - metadata:
      name: dbdata
    spec:
      accessModes:
      - ReadWriteOnce
      volumeMode: Filesystem
      storageClassName: fast
      resources:
        requests:
          storage: 4Gi

---
apiVersion: v1
kind: Service
metadata:
  name: database-svc
  namespace: pvtest
spec:
  type: ClusterIP
  ports:
    - port: 5432
  selector:
    app: database
