example/k8s/nginx-sample.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: NodePort
  ports:
    - port: 80
      nodePort: 30000 #30000~32767の間で指定
  selector: #下記のLabel（ラベル）を指定したPodに伝送
    app: nginx
